[gd_scene load_steps=5 format=3 uid="uid://c6j7r2x8g2u5"]

[ext_resource type="Script" uid="uid://cffp5ey5r80o3" path="res://scripts/ui/main_ui.gd" id="1_main_ui"]
[ext_resource type="Script" uid="uid://ctli1fxy8tr4y" path="res://scripts/systems/pool_system.gd" id="3_pool_sys"]
[ext_resource type="Script" uid="uid://ckh2sari812yx" path="res://scripts/systems/inventory_system.gd" id="4_inv_sys"]
[ext_resource type="Script" uid="uid://cvhcqrbwgr42v" path="res://scripts/systems/order_system.gd" id="5_order_sys"]

[node name="MainUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_main_ui")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="TopBar" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="GoldLabel" type="Label" parent="VBoxContainer/TopBar"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "金币: 0"

[node name="TicketsLabel" type="Label" parent="VBoxContainer/TopBar"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "奖券: 0"

[node name="StageLabel" type="Label" parent="VBoxContainer/TopBar"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "阶段: 1"

[node name="Control" type="Control" parent="VBoxContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SkillsContainer" type="HBoxContainer" parent="VBoxContainer/TopBar"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 10

[node name="MainContent" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="OrdersSection" type="VBoxContainer" parent="VBoxContainer/MainContent"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="VBoxContainer/MainContent/OrdersSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "订单"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/MainContent/OrdersSection"]
layout_mode = 2
size_flags_vertical = 3

[node name="OrdersContainer" type="VBoxContainer" parent="VBoxContainer/MainContent/OrdersSection/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 15

[node name="PoolsSection" type="VBoxContainer" parent="VBoxContainer/MainContent"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="VBoxContainer/MainContent/PoolsSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "奖池"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/MainContent/PoolsSection"]
layout_mode = 2
size_flags_vertical = 3

[node name="PoolsContainer" type="VBoxContainer" parent="VBoxContainer/MainContent/PoolsSection/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 15

[node name="InventorySection" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="VBoxContainer/InventorySection"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 20
text = "背包"
horizontal_alignment = 1

[node name="InventoryGrid" type="GridContainer" parent="VBoxContainer/InventorySection"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 10

[node name="ActionArea" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="PendingSection" type="VBoxContainer" parent="VBoxContainer/ActionArea"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="PendingLabelTitle" type="Label" parent="VBoxContainer/ActionArea/PendingSection"]
layout_mode = 2
text = "新物品"
horizontal_alignment = 1

[node name="PendingContainer" type="HBoxContainer" parent="VBoxContainer/ActionArea/PendingSection"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 10

[node name="ModeLabel" type="Label" parent="VBoxContainer/ActionArea"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.0588235, 0.0901961, 0.164706, 1)
theme_override_font_sizes/font_size = 18
text = "整理模式"
horizontal_alignment = 1

[node name="ButtonsHBox" type="HBoxContainer" parent="VBoxContainer/ActionArea"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 10

[node name="SubmitModeButton" type="Button" parent="VBoxContainer/ActionArea/ButtonsHBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 45)
layout_mode = 2
text = "提交模式"

[node name="RecycleModeButton" type="Button" parent="VBoxContainer/ActionArea/ButtonsHBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 45)
layout_mode = 2
text = "回收模式"

[node name="PoolSystem" type="Node" parent="."]
script = ExtResource("3_pool_sys")

[node name="InventorySystem" type="Node" parent="."]
script = ExtResource("4_inv_sys")

[node name="OrderSystem" type="Node" parent="."]
script = ExtResource("5_order_sys")
